<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MyCookbook.AddRecipeActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/edit_recipe_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_marginBottom="50dp"
            android:text="@string/recipe_header_label"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_marginTop="30dp"
                android:padding="15dp"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/recipe_name_label"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_recipe_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_marginTop="30dp"
                android:padding="15dp"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/recipe_category_label"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_recipe_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_marginTop="30dp"
                android:padding="15dp"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/recipe_image_label"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_recipe_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_marginTop="30dp"
                android:padding="15dp"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/recipe_ingredients_label"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_recipe_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_marginTop="30dp"
                android:padding="15dp"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/recipe_steps_label"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/publish_recipe_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="30dp"
            android:background="@color/colorPrimaryDark"
            android:padding="17dp"
            android:text="@string/recipe_button_label"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>