<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/headerView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp"
            android:layout_marginTop="20dp"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/app_name" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_an_option_label"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <GridLayout
            android:id="@+id/mainGrid"
            android:columnCount="2"
            android:rowCount="1"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_weight="8"
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            >

            <!-- Row 1 -->

            <!-- Column 1 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/add_recipe_btn"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#ffff"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="73dp"
                        android:src="@drawable/cookbook"
                        android:layout_gravity="center_horizontal"
                         />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_recipe"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Column 2 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/explore_recipe_btn"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardBackgroundColor="#ffff"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:layout_width="72dp"
                        android:layout_height="73dp"
                        android:src="@drawable/recipe"
                        />

                    <TextView
                        android:text="@string/explore_recipe"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>

</LinearLayout>