<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyCookbook.MyRecipeDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/recipe_image_details"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>

        <TextView
            android:id="@+id/recipe_name_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipe_image_details"
            android:text="@string/recipe_name_label_public"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/recipe_ingredientsCard_details"
            android:layout_below="@+id/recipe_name_details"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="40dp"
            android:elevation="20dp"
            android:layout_marginTop="15dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recipe_ingredientsTitle_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_ingredients_label_public"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:id="@+id/recipe_ingredients_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_ingredients_label_public"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/recipe_stepsCard_details"
            android:layout_below="@+id/recipe_ingredientsCard_details"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="40dp"
            android:elevation="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recipe_stepsTitle_details_api"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_steps_label_public"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    />

                <TextView
                    android:id="@+id/recipe_steps_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_steps_label_public"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:lineSpacingExtra="2dp"
                    android:layout_marginTop="20dp"
                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/edit_recipe_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipe_stepsCard_details"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="Edit Recipe"
            android:textColor="#ffff"
            android:background="@color/colorPrimary"
            android:layout_marginTop="30dp"
            />

        <Button
            android:id="@+id/delete_recipe_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_recipe_btn"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="Delete Recipe"
            android:textColor="#ffff"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            />



    </RelativeLayout>


</ScrollView>