<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExploreRecipe.RecipeDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/recipe_image_details_api"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <TextView
            android:id="@+id/recipe_name_details_api"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipe_image_details_api"
            android:text="@string/recipe_name_label_public"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/recipe_ingredientsCard_details_api"
            android:layout_below="@+id/recipe_name_details_api"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="40dp"
            android:elevation="20dp"
            android:layout_marginTop="15dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recipe_ingredientsTitle_details_api"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_ingredients_label_public"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:id="@+id/recipe_ingredients1_details_api"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_ingredients_label_public"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:id="@+id/recipe_ingredients2_details_api"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_ingredients_label_public"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:id="@+id/recipe_ingredients3_details_api"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_ingredients_label_public"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:id="@+id/recipe_ingredients4_details_api"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_ingredients_label_public"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:id="@+id/recipe_ingredients5_details_api"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_ingredients_label_public"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/recipe_stepsCard_details_api"
            android:layout_below="@+id/recipe_ingredientsCard_details_api"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="40dp"
            android:elevation="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recipe_stepsTitle_details_api"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_steps_label_public"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    />

                <TextView
                    android:id="@+id/recipe_steps_details_api"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:text="@string/recipe_steps_label_public"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:lineSpacingExtra="5dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:justificationMode="inter_word"

                    />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>